--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
-{% if nome %}
-<h1>Hello {{ nome }}!</h1>
-{% else %}
-<h1>Hello, World!</h1>
-{% endif %}
+<link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
+
+<h1>Welcome, friend</h1>
+
+<h2>Register</h2>
 
 <form action="/" method="POST">
 
@@ -15,6 +15,35 @@
     <label>Password</label>
     <input type="password" id="password" name="password" placeholder="Create a password">
     
+    <input type="hidden" name="type" value="register">
+
     <button type="submit">Sign up</button>
 
 </form>
+
+{% if error_register %}
+<p>Erro: {{ error_register }}</p>
+{% endif %}
+
+<h2>Log-In</h2>
+
+<form action="/" method="POST">
+
+    <label>Username</label>
+    <input type="text" id="username" name="username" placeholder="Select a username">
+
+    <label>Email</label>
+    <input type="email" id="email" name="email" placeholder="Enter your email">
+
+    <label>Password</label>
+    <input type="password" id="password" name="password" placeholder="Create a password">
+
+    <input type="hidden" name="type" value="login">
+
+    <button type="submit">Sign up</button>
+
+</form>
+
+{% if error_login %}
+<p class="error">Erro: {{ error_login }}</p>
+{% endif %}
