--- a/templates/register_success.html
+++ b/templates/register_success.html
@@ -1,1 +1,1 @@
-<h1>Parabéns, a sua conta foi criada com sucesso</h1>
+<h1>Parabéns, {{ current_user.name }}, a sua conta foi criada com sucesso.</h1>
