make login use username OR email

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,8 @@
     <form action="/" method="POST">
 
         <div class="campo-form">
-            <label>Usuário</label>
-            <input type="text" id="username" name="username" placeholder="Nome de usuário">
-        </div>
-
-        <div class="campo-form">
-            <label>E-mail</label>
-            <input type="email" id="email" name="email" placeholder="endereço@dominio.com.br">
+            <label>Usuário ou E-mail</label>
+            <input type="text" name="username_email" placeholder="Usuário ou E-mail">
         </div>
 
         <div class="campo-form">
