Changed what's written in the login page

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
     <h1>Bem Vindo ao Sistema de Locação de Instrumentos Musicais</h1>
 
-    <h2>Tens o que é preciso? Entre agora mesmo</h2>
+    <h2>Entrar</h2>
 
     <form action="/" method="POST">
 
@@ -27,7 +27,7 @@
         <input type="hidden" name="type" value="login">
 
         <div class="campo-form">
-            <button type="submit">Log In</button>
+            <button type="submit">Entrar</button>
         </div>
 
     </form>
@@ -36,7 +36,7 @@
     <p class="error">Erro: {{ error_login }}</p>
     {% endif %}
 
-    <h2>Não tens uma conta? Registra-te agora, tchê</h2>
+    <h2>Criar Conta</h2>
 
     <form action="/" method="POST">
 
