Fix auth, db schema and update app to use database interface

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
         <div class="campo-form">
             <label>Usuário ou E-mail</label>
-            <input type="text" name="username_email" placeholder="Usuário ou E-mail">
+            <input type="text" name="email" placeholder="E-mail">
         </div>
 
         <div class="campo-form">
