--- a/static/css/announce-instruments.css
+++ b/static/css/announce-instruments.css
@@ -1,10 +1,3 @@
-h1 {
-    font-size: 24px;
-}
-
-form {
-    max-width: 360px;
-}
 .campo-form  label {
     width: 100%;
     font-size: 18px;
@@ -19,6 +12,11 @@ form {
 
 table {
     width: 100%;
+}
+
+#precoInput, #diasInput {
+    width: 99%;
+    border: none;
 }
 
 table, th, td {
