--- a/templates/announce-instruments.html
+++ b/templates/announce-instruments.html
@@ -1,13 +1,16 @@
-<link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='announce-instruments.css') }}">
-<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/x-icon">
-<script> var icon_path = "{{ url_for('static', filename = 'ic-trash.svg') }}";</script>
-<script src="{{ url_for('static', filename='announce-instruments.js') }}"></script>
-<title>Aluguel de Instrumentos</title>
+{% extends "base.html" %}
 
+{% block title %} Novo Anúncio {% endblock %}
+
+{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/announce-instruments.css') }}">
+<script> var icon_path = "{{ url_for('static', filename = 'img/ic-trash.svg') }}";</script>
+<script src="{{ url_for('static', filename='js/announce-instruments.js') }}"></script>
+{% endblock %}
+
+{% block content %}
 <h1>Publicar Anúncio de Aluguel de Instrumento</h1>
-
-<form action="/anunciar-instrumento" method="POST">
+<form class="content" action="/anunciar-instrumento" method="POST">
 
     <div class="campo-form">
         <label>Classe do instrumento</label>
@@ -54,3 +57,4 @@
     </div>
 
 </form>
+{% endblock %}
