--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,12 @@
-<link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
+{% extends "base.html" %}
+
+{% block title %} Login {% endblock %}
+
+{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+{% endblock %}
+
+{% block content %}
 
 {% if current_user.is_authenticated %}
 
@@ -68,3 +76,5 @@
     {% endif %}
 
 {% endif %}
+
+{% endblock %}
