--- a/templates/register_success.html
+++ b/templates/register_success.html
@@ -1,1 +1,9 @@
+{% extends "base.html" %}
+
+{% block title %} Sucesso! {% endblock %}
+
+{% block content %}
+
 <h1>Parabéns, {{ current_user.name }}, a sua conta foi criada com sucesso.</h1>
+
+{% endblock %}
