--- a/templates/locacao.html
+++ b/templates/locacao.html
@@ -8,7 +8,7 @@
 {% block content %}
 <form action="#" method="POST" action="/locacao/{{id}}">
 	
-	<h2>Dados do Locador:</h2>
+	<h2>Dados do Locatário:</h2>
 
 	<p>Usuário: {{user}}</p>
 	<p>Email: {{email}}</p>
