--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,7 @@
 
 {% if current_user.is_authenticated %}
 
-    <h1>Olá, {{ current_user.name }}.</h1>
-    <h2>Você já está logado. Caso queira deslogar, clique no botão abaixo:</h2>
-    <input type="button" onclick="location.href='/logout';" value="Deslogar"/>
+    <h1 style="width: 200%;">Você está sendo redirecionado ¯\_( ͡❛ ͜ʖ ͡❛)_/¯</h1>
 
 {% else %}
 
