--- a/templates/pagina_pagamento.html
+++ b/templates/pagina_pagamento.html
@@ -13,7 +13,7 @@
 <h1>Valor Total a ser Pago:</h1>
 <p>R$ {{charge}}</p>
 
-<form action="/pagina_pagamento">
+<form action="/pagamento" method="POST">
     <button type="submit">Pagar</button>
 </form>
 {% endblock %}
