--- a/templates/locacao.html
+++ b/templates/locacao.html
@@ -2,22 +2,23 @@
 {% block title %}Página de Locação{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/locacao.css') }}">
+<script src="{{ url_for('static', filename='js/locacao.js') }}"></script>
 {% endblock %}
 
 {% block content %}
 <form action="#" method="POST" action="/locacao/{{id}}">
 	
-	<h2>Dados do Locador:</h2>
+	<h1>Dados do Locador:</h1>
 
-	<p>Usuário: {{user}}</p>
-	<p>Email: {{email}}</p>
+	<div class="label">Usuário: <span class="valor">{{user}}</span></div>
+	<div class="label">Email: <span class="valor">{{email}}</span></div>
 
-	<h2>Dados do Instrumento</h2>
-	<p>Marca: {{brand}}</p>
-	<p>Modelo: {{model}}</p>
+	<h1>Dados do Instrumento</h1>
+	<div class="label">Marca: <span class="valor">{{brand}}</span></div>
+	<div class="label">Modelo: <span class="valor">{{model}}</span></div>
 
-	<p>Preço por Dia:</p>
+	<div class="label">Preço por Dia:</div>
 	<table>
 		<tr>
 			<th>Preço</th>
@@ -32,20 +33,20 @@
 	</table>
 
 	<!-- date format: AAAA-DD-MM -->
-	<h2>Período de Locação:</h2>
-	<form action="/locacao/{{id}}">
-	<label for="start"> Data de Retirada:</label>
-	<input type= "date" id="retirada" name="retirada_instrumento"
+	<h1>Período de Locação:</h1>
+	<form action="/locacao/{{id}}" onsubmit="return validarForm()">
+	<div class="label"> Data de Retirada:</div>
+	<input type= "date" id="retirada" class="date" name="retirada_instrumento"
 		   value="1970-01-01" 
 		   min="1970-01-01" max="9021-12-30">
 	<br>
 	
-	<label for="start"> Data de Devolução:</label>
-	<input type= "date" id="devolucao" name="devolucao_instrumento"
+	<div class="label"> Data de Devolução:</div>
+	<input type= "date" id="devolucao" class="date" name="devolucao_instrumento"
 		   value="2000-02-01"
 		   min="2000-01-01" max="9021-12-31">
 	<br>
-	<p><button type="submit">Proceder para pagamento</button></p>
+	<button type="submit">Proceder para pagamento</button>
 	</form>
 
 </form>
