fix upsert and history

--- a/templates/historico.html
+++ b/templates/historico.html
@@ -31,7 +31,7 @@
 		<td>{{record["loan"]["withdrawal"]}}</td>
 		<td>{{record["loan"]["devolution"]}}</td>
 		<td>{{record["loan"]["lessee"]["name"]}}</td>
-		<td>{{record["loan"]["lessee"]["rating"]}}</td>
+		<td>{{record["rating"]}}</td>
 	</tr>
 {%endfor%}
 </table>
